Changed projects to 'lastest c# (minor)' and file scoped namespaces

--- a/src/Contacts.Api/Contacts.Api.csproj
+++ b/src/Contacts.Api/Contacts.Api.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <UserSecretsId>23e6f949-3393-4128-aa27-cdc13ae91e48</UserSecretsId>
-    <LangVersion>9</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Contacts.Data.SqlServer\Contacts.Data.SqlServer.csproj" />
