--- a/src/Contacts.Api/appsettings.Development.json
+++ b/src/Contacts.Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ContactsDatabaseSqlServer": ""
+    "ContactsDatabaseSqlServer": "",
+    "ContactsDatabaseSqlite": ""
   },
   "ApplicationInsights": {
     "InstrumentationKey": ""
