--- a/src/Contacts.Api/appsettings.json
+++ b/src/Contacts.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
 
   "ConnectionStrings": {
-    "ContactsDatabaseSqlServer": ""
+    "ContactsDatabaseSqlServer": "",
+    "ContactsDatabaseSqlite": ""
   },
   "ApplicationInsights": {
     "InstrumentationKey": ""
